tests/asm-link/code-after-endm-endr-endc/rgbasm.err
error: syntax error: unexpected println
   ╭─[ test.asm:5:6 ]
   │
 5 │ ENDM println "<_<"
   │      ───┬───  
   │         ╰───── expected nothing else on this line
───╯
error: syntax error: unexpected println
    ╭─[ test.asm:10:6 ]
    │
 10 │ ENDR println "<_<"
    │      ───┬───  
    │         ╰───── expected nothing else on this line
────╯
error: syntax error: unexpected println
    ╭─[ test.asm:15:6 ]
    │
 15 │ ELSE println "<_<"
    │      ───┬───  
    │         ╰───── expected nothing else on this line
────╯
error: syntax error: unexpected println
    ╭─[ test.asm:17:6 ]
    │
 17 │ ENDC println "<_<"
    │      ───┬───  
    │         ╰───── expected nothing else on this line
────╯
error: syntax error: unexpected println
    ╭─[ test.asm:21:6 ]
    │
 21 │ ELSE println "<_<"
    │      ───┬───  
    │         ╰───── expected nothing else on this line
────╯
error: syntax error: unexpected println
    ╭─[ test.asm:23:6 ]
    │
 23 │ ENDC println "<_<"
    │      ───┬───  
    │         ╰───── expected nothing else on this line
────╯
6 errors generated.
